Bug 1541139 - Port bug 1537594: s/font.size.fixed./font.size.monospace./ in C-C. rs=bustage-fix